--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #536dfe;
+    background-color: #F4F5FF;
     padding: 5px 10px;
     display: flex;
     justify-content: space-between;
@@ -12,7 +12,7 @@
     cursor: pointer;
     padding: 8px;
     background: none;
-    color: white;
+    color: black;
     border: none;
     outline: none;
 }
