--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #F4F5FF;
+    background-color: #ffffff;
     padding: 5px 10px;
     display: flex;
     justify-content: space-between;
