--- a/src/components/RootComponent/App.css
+++ b/src/components/RootComponent/App.css
@@ -15,7 +15,7 @@
 .main-content {
     border-radius: 3px;
     min-height: 80%;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     background: white;
     margin-left: 15px;
     margin-top: 15px;
