--- a/src/components/RootComponent/index.css
+++ b/src/components/RootComponent/index.css
@@ -49,11 +49,6 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    /* margin: 0;
-    display: flex;
-    place-items: start;
-    min-width: 320px;
-    min-height: 100vh; */
 }
 
 h1 {
@@ -143,6 +138,16 @@ h1 {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+}
+
+::selection {
+  background: black;
+  color: white;
+}
+
+::-moz-selection {
+  background: black;
+  color: white;
 }
 
 @layer base {
