--- a/src/components/RootComponent/App.css
+++ b/src/components/RootComponent/App.css
@@ -16,4 +16,17 @@
     border-radius: 3px;
     overflow-y: auto;
     padding: 10px;
+    flex: 1;
+    overflow: auto;
+}
+
+@media (max-width: 320px) {
+    .wrap-main-layout {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .main-content {
+        padding-left: 2px;
+    }
 }
