--- a/src/components/RootComponent/App.css
+++ b/src/components/RootComponent/App.css
@@ -2,7 +2,6 @@
     display: flex;
     height: 100vh;
     width: 100%;
-    overflow: hidden;
 }
 
 .main {
@@ -10,6 +9,7 @@
     display: flex;
     flex-direction: column;
     transition: flex 0.3s ease;
+    overflow: scroll;
 }
 
 .main-content {
@@ -24,9 +24,5 @@
     .wrap-main-layout {
         margin-left: 0px;
         margin-right: 0px;
-    }
-
-    .main-content {
-        padding-left: 2px;
     }
 }
