--- a/src/pages/css/Homepage.css
+++ b/src/pages/css/Homepage.css
@@ -4,6 +4,23 @@
     justify-content: center;
 }
 
+.home-page .content-memo-notify {
+    max-height: 7em;
+    overflow: hidden;
+    position: relative;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+}
+
+.home-page .content-memo-notify img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    max-height: 100px;
+    object-fit: contain;
+}
+
 @media (max-width: 862px) {
     .wrap-home-page label {
         font-size: 15px;
